--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <h3>Video 1</h3>
 <video width="80%" controls>
-  <source src="https://files.catbox.moe/abcd12.mp4" type="video/mp4">
-</video>
+  <source src="https://files.catbox.moe/sjn7h9.mp4" type="video/mp4">
+
 
 <br><br>
 
 <h3>Video 2</h3>
 <video width="80%" controls>
-  <source src="https://files.catbox.moe/efgh34.mp4" type="video/mp4">
+  <source src="https://files.catbox.moe/sjn7h9.mp4 type="video/mp4">
 </video>
 
 </body>
