--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Video Website</title>
+<meta name="monetag" content="20d6fe6d712b48ce54ec1c78071b9ae6">
+  <title>My Video Website</title>
 </head>
 
 <body style="text-align:center;font-family:sans-serif;">
